Corrected build documentation.
The original author sent me autogen-support.sh but autoreconf -i also
generates a configure script that works.

--- a/HACKING
+++ b/HACKING
@@ -3,6 +3,6 @@ Hacking Guile-0MQ
 
 git clone git://.../guile-zmq.git
 cd guile-zmq
-./autogen.sh && ./configure --prefix=/opt/guile-zmq && make && sudo make install
+autoreconf -i && ./configure --prefix=/opt/guile-zmq && make && sudo make install
 
 See the TODO file for pending tasks.
